configure.in (mips*-*-*): Add a test to see if MIPS libgloss linker scripts use STARTUP directives...
2002-07-29  Chris Demetriou  <cgd@broadcom.com>

        * configure.in (mips*-*-*): Add a test to see if MIPS libgloss
        linker scripts use STARTUP directives consistently.
        * configure: Regenerate.
        * config.in: Regenerate.
        * config/mips/elf.h (STARTFILE_SPEC): Define conditionally, based
        on whether HAVE_MIPS_LIBGLOSS_STARTUP_DIRECTIVES is defined.
        * config/mips/elf64.h (STARTFILE_SPEC): Likewise.
        * config/mips/isa3264.h (STARTFILE_SPEC): Do not redefine if
        HAVE_MIPS_LIBGLOSS_STARTUP_DIRECTIVES is set; the result
        will be the same.

From-SVN: r55851

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -2172,6 +2172,36 @@ if test x"$gcc_cv_ld_eh_frame_hdr" = xyes; then
 fi
 AC_MSG_RESULT($gcc_cv_ld_eh_frame_hdr)
 
+# Miscellaneous target-specific checks.
+case "$target" in
+  mips*-*-*)
+    AC_MSG_CHECKING(whether libgloss uses STARTUP directives consistently)
+    gcc_cv_mips_libgloss_startup=no
+    gcc_cv_libgloss_srcdir=`echo $srcdir | sed -e 's,/gcc$,,'`/libgloss
+    if test "x$exec_prefix" = xNONE; then
+      if test "x$prefix" = xNONE; then
+        test_prefix=/usr/local
+      else
+        test_prefix=$prefix
+      fi
+    else
+      test_prefix=$exec_prefix
+    fi
+    for f in $gcc_cv_libgloss_srcdir/mips/idt.ld $test_prefix/$target_alias/lib/idt.ld
+    do
+      if grep '^STARTUP' $f > /dev/null 2>&1; then
+        gcc_cv_mips_libgloss_startup=yes
+        break
+      fi
+    done
+    if test x"$gcc_cv_mips_libgloss_startup" = xyes; then
+      AC_DEFINE(HAVE_MIPS_LIBGLOSS_STARTUP_DIRECTIVES, 1,
+        [Define if your MIPS libgloss linker scripts consistently include STARTUP directives.])
+    fi
+    AC_MSG_RESULT($gcc_cv_mips_libgloss_startup)
+    ;;
+esac
+
 if test "$prefix" != "/usr" && test "$prefix" != "/usr/local" ; then
   AC_DEFINE_UNQUOTED(PREFIX_INCLUDE_DIR, "$prefix/include")
 fi
