--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -915,7 +915,7 @@ else
 	cd ..
 	rm -rf $tempdir
 	build_auto=auto-build.h
-	FORBUILD=../$build
+	FORBUILD=../$build_alias
 fi
 AC_SUBST(FORBUILD)
 
