configure.in (PREFIX_INCLUDE_DIR): Don't define if prefix and local_prefix are the same.
	* configure.in (PREFIX_INCLUDE_DIR): Don't define if prefix and
	local_prefix are the same.
	* configure: Rebuilt.

From-SVN: r56108

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -2202,7 +2202,7 @@ case "$target" in
     ;;
 esac
 
-if test "$prefix" != "/usr" && test "$prefix" != "/usr/local" ; then
+if test "$prefix" != "/usr" && test "x$prefix" != "x$local_prefix" ; then
   AC_DEFINE_UNQUOTED(PREFIX_INCLUDE_DIR, "$prefix/include")
 fi
 
