* Makefile.in (c-opts.o): Update 	* c-opts.c: Include intl.h. 	(print_help): Move from cppinit.c.  Remove unused options. 	(COMMAND_LINE_OPTIONS): Move more from cppinit.c. 	(missing_arg): Complain for switches without an argument. 	(c_common_decode_option): Reject missing joined arguments. 	Handle new switches from cppinit.c. 	* cppinit.c (COMMAND_LINE_OPTIONS): Move some switches to c-opts.c. 	(cpp_handle_option): Similarly. 	(print_help): Moved to c-opts.c. 	* cpplib.h (struct cpp_options): Remove help_only. 	* gcc.c (cpp_unique_options): Remove -$. 	* doc/cppopts.texi: Undocument -h.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56155 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -1241,7 +1241,8 @@ c-pretty-print.o : c-pretty-print.c c-pretty-print.h pretty-print.h \
 	$(C_COMMON_H) $(CONFIG_H) $(SYSTEM_H) real.h
 
 c-opts.o : c-opts.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) $(C_COMMON_H) \
-        c-pragma.h flags.h toplev.h langhooks.h tree-inline.h diagnostic.h
+        c-pragma.h flags.h toplev.h langhooks.h tree-inline.h diagnostic.h \
+	intl.h
 
 # A file used by all variants of C and some other languages.
 
