profile.c (da_file_name): New static var.
	* profile.c (da_file_name): New static var.
	(init_branch_prob): Initialize it.
	(end_branch_prob): Remove da file.

	* Makefile.in (stage1_build): Pass empty COVERAGE_FLAGS.
	* configure.in (coverage_flags) default to nothing.
	* configure: Rebuilt.

From-SVN: r56164

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -3320,7 +3320,7 @@ STAGE2_FLAGS_TO_PASS = \
 stage1_build:
 	$(MAKE) CC="$(CC)" libdir=$(libdir) LANGUAGES="$(BOOT_LANGUAGES)" \
 		CFLAGS="$(STAGE1_CFLAGS)" MAKEINFO="$(MAKEINFO)" \
-		MAKEINFOFLAGS="$(MAKEINFOFLAGS)"
+		MAKEINFOFLAGS="$(MAKEINFOFLAGS)" COVERAGE_FLAGS=
 	$(STAMP) stage1_build
 	echo stage1_build > stage_last
 
