--- a/libjava/Makefile.in
+++ b/libjava/Makefile.in
@@ -1656,6 +1656,7 @@ java/net/NoRouteToHostException.java \
 java/net/PasswordAuthentication.java \
 java/net/PlainDatagramSocketImpl.java \
 java/net/PlainSocketImpl.java \
+java/net/PortUnreachableException.java \
 java/net/ProtocolException.java	\
 java/net/ServerSocket.java \
 java/net/Socket.java \
@@ -1664,6 +1665,8 @@ java/net/SocketImpl.java \
 java/net/SocketImplFactory.java	\
 java/net/SocketOptions.java \
 java/net/SocketPermission.java \
+java/net/SocketTimeoutException.java \
+java/net/URISyntaxException.java \
 java/net/URL.java \
 java/net/URLClassLoader.java \
 java/net/URLConnection.java \
@@ -2860,11 +2863,14 @@ DEP_FILES =  .deps/$(srcdir)/$(CONVERT_DIR)/gen-from-JIS.P \
 .deps/java/net/NetPermission.P .deps/java/net/NoRouteToHostException.P \
 .deps/java/net/PasswordAuthentication.P \
 .deps/java/net/PlainDatagramSocketImpl.P \
-.deps/java/net/PlainSocketImpl.P .deps/java/net/ProtocolException.P \
-.deps/java/net/ServerSocket.P .deps/java/net/Socket.P \
-.deps/java/net/SocketException.P .deps/java/net/SocketImpl.P \
-.deps/java/net/SocketImplFactory.P .deps/java/net/SocketOptions.P \
-.deps/java/net/SocketPermission.P .deps/java/net/URL.P \
+.deps/java/net/PlainSocketImpl.P \
+.deps/java/net/PortUnreachableException.P \
+.deps/java/net/ProtocolException.P .deps/java/net/ServerSocket.P \
+.deps/java/net/Socket.P .deps/java/net/SocketException.P \
+.deps/java/net/SocketImpl.P .deps/java/net/SocketImplFactory.P \
+.deps/java/net/SocketOptions.P .deps/java/net/SocketPermission.P \
+.deps/java/net/SocketTimeoutException.P \
+.deps/java/net/URISyntaxException.P .deps/java/net/URL.P \
 .deps/java/net/URLClassLoader.P .deps/java/net/URLConnection.P \
 .deps/java/net/URLDecoder.P .deps/java/net/URLEncoder.P \
 .deps/java/net/URLStreamHandler.P \
